tests/success/foreach_iter_scope_leak.bz
function main()
{
	let i = 0i32;
	let arr: [1: u32] = [ 0 ];
	for (let i in arr)
	{
		static_assert(typeof i == u32);
	}
	static_assert(typeof i == i32);
}
