tests/error/comptime/compare_pointers6.bz
function test()
{
	(consteval {
		consteval i = [ 0, 0 ];
		consteval j = 0;

		&i[1] + 1 < &j;
	});
}
